StopApps : Overflow & scrollbar's colors

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -4,6 +4,8 @@
 
 * {
 	font-family: "Roboto", cursive;
+	user-select: none;
+
 }
 
 div#App {
