--- a/src/components/StopApps/StopApps.css
+++ b/src/components/StopApps/StopApps.css
@@ -3,16 +3,18 @@ div#stopApps {
 	margin: 1rem;
 }
 
-div#stopApps div#apps  {
+div#stopApps div#apps {
 	display: grid;
 	grid-template: 1fr /1fr 1fr 1fr 1fr;
 	grid-auto-flow: row;
+	grid-gap: 1rem;
+
 }
 
 
 button#kill {
-	padding : 0.5rem 1rem;
-	color : whitesmoke;
+	padding: 0.5rem 1rem;
+	color: whitesmoke;
 	border: none;
 	border-radius: 0.5rem;
 	background: darkred;
@@ -30,20 +32,60 @@ div.selected {
 	font-weight: bold;
 }
 
-div#apps div#gameApp {
+
+div#apps div.gameApp {
 	color: dodgerblue;
 }
 
-div#apps div#undefinedApp div {
-	color: grey;
+div#apps > div > div {
+	overflow-y: auto;
+	max-height: 70vh;
 }
 
-div#apps div#driveApp {
+
+
+
+
+div#apps div div::-webkit-scrollbar {
+	width: 8px;
+	background-color: #33333333;
+}
+
+div#apps div.undefinedApp div::-webkit-scrollbar-thumb {
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
+	background-color: grey;
+}
+
+
+div#apps div.undefinedApp, div#apps div.undefinedApp div {
+	color: grey;
+
+}
+
+
+div#apps div.driveApp div::-webkit-scrollbar-thumb {
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
+	background-color: yellow;
+}
+
+div#apps div.driveApp {
 	color: yellow;
 }
 
-div#apps div#progApp {
-	color: green;
+div#apps div.progApp div::-webkit-scrollbar-thumb {
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
+	background-color: #00a300;
 }
 
-/*# sourceMappingURL=StopApps.css.map */
+
+div#apps div.progApp {
+	color: #00a300;
+}
+
+div.app {
+	margin: 0.3rem;
+}
+
